# embedded-services

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: cargo-vet-pr-comment.yml  cargo-vet.yml  check.yml  commit-list.yml  nostd.yml
battery-service/: Cargo.toml
battery-service/src/: context.rs  controller.rs  device.rs  lib.rs  wrapper.rs
battery-service/src/charger/: mod.rs
battery-service/src/fuel_gauge/: mod.rs
cfu-service/: Cargo.toml
cfu-service/src/: host.rs  lib.rs
docs/: power-policy.md
embedded-service/: Cargo.toml
embedded-service/src/: activity.rs  buffer.rs  comms.rs  fmt.rs  init.rs  intrusive_list.rs  keyboard.rs  lib.rs  transport.rs
embedded-service/src/cfu/: component.rs  mod.rs
embedded-service/src/ec_type/: message.rs  mod.rs  structure.rs
embedded-service/src/ec_type/generator/: ec-memory-generator.py  ec_memory_map.yaml
embedded-service/src/hid/: command.rs  mod.rs
embedded-service/src/ipc/: deferred.rs  mod.rs
embedded-service/src/power/: mod.rs
embedded-service/src/power/policy/: charger.rs  device.rs  mod.rs  policy.rs
embedded-service/src/power/policy/action/: device.rs  mod.rs  policy.rs
embedded-service/src/type_c/: comms.rs  controller.rs  event.rs  external.rs  mod.rs
embedded-service/src/type_c/ucsi/: lpm.rs  mod.rs  ppm.rs
espi-service/: Cargo.toml
espi-service/.cargo/: config.toml
espi-service/src/: espi_service.rs  lib.rs
examples/rt633/: Cargo.toml  README.md  memory.x  rt633.yaml
examples/rt633/.cargo/: config.toml
examples/rt633/src/: lib.rs
examples/rt685s-evk/: Cargo.toml  README.md
examples/rt685s-evk/src/: lib.rs
examples/std/: Cargo.toml
hid-service/: Cargo.toml
hid-service/src/: lib.rs
hid-service/src/i2c/: device.rs  host.rs  mod.rs
hid-service/src/i2c/passthrough/: interrupt.rs  mod.rs
platform-service/: Cargo.toml  README.md
platform-service/src/: embedded_crc.rs  lib.rs  nvram.rs  reset.rs
platform-service/src/defaults/: embedded_crc.rs  mod.rs  nvram.rs
platform-service/src/imxrt/: embedded_crc.rs  mod.rs
power-button-service/: Cargo.toml
power-button-service/src/: button.rs  button_interpreter.rs  debounce.rs  lib.rs
power-policy/: Cargo.toml
power-policy-service/: Cargo.toml
power-policy-service/src/: charger.rs  config.rs  consumer.rs  lib.rs  provider.rs
power-policy/src/: lib.rs
src/: button.rs  button_interpreter.rs  debounce.rs  lib.rs  power_button.rs
src/power_button/: debounce.rs  mod.rs
storage-bus/: Cargo.toml  README.md
storage-bus/src/: lib.rs  nand.rs  nor.rs
supply-chain/: README.md  audits.toml  config.toml
type-c-service/: Cargo.toml
type-c-service/src/: lib.rs  task.rs  wrapper.rs
type-c-service/src/driver/: mod.rs  tps6699x.rs
type-c-service/src/wrapper/: mod.rs  pd.rs  power.rs
