[package]
name = "embedded-services"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embedded Service Layer for IPC, Feature Customization and Extension in Embedded Devices."
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.83"

[dependencies]
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
cfg-if = "1.0.0"
cortex-m-rt = ">=0.6.15,<0.8"
cortex-m = "0.7.6"
critical-section = "1.1"
chrono = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
embedded-storage-async = { version = "0.4.1" }
rand_core = "0.6.4"
fixed = "1.23.1"

postcard = "1.*"
serde = { version = "1.0.*", default-features = false }

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd" }

document-features = "0.2.7"

bitfield = "0.17.0"

[dev-dependencies]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "std",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

[features]
default = []
defmt = [
    "dep:defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embedded-usb-pd/defmt",
]
log = [
    "dep:log",
    "embassy-sync/log",
    "embassy-time/log",
    "embassy-executor/log",
    "embassy-futures/log",
]
