[package]
name = "espi-service"
version = "0.1.0"
edition = "2021"
description = "eSPI embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.83"
license = "MIT"

[dependencies]
embedded-services = { path = "../embedded-service" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt", rev = "35d430666574379ef2186c25172ca848ae19d11b", features = [
    "defmt",
    "time-driver",
    "time",
    "mimxrt633s",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-sync/defmt",
]
