[package]
name = "hid-service"
version = "0.1.0"
edition = "2021"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"
license = "MIT"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-sync/defmt",
]
log = ["dep:log", "embedded-services/log", "embassy-time/log"]
