[package]
name = "storage_bus"
version = "0.1.1"
edition = "2021"
description = "Storage Bus interfaces"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"
license = "MIT"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
]
