[package]
name = "type-c-service"
version = "0.1.0"
edition = "2021"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.83"
license = "MIT"

[dependencies]
embedded-services = { path = "../embedded-service" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield = "0.17.0"

tps6699x = { git = "https://github.com/OpenDevicePartnership/tps6699x", features = [
    "embassy",
] }
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false }


[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "tps6699x/defmt",
    "embedded-usb-pd/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
    "tps6699x/log",
]
