[package]
name = "type-c-service"
version = "0.1.0"
edition = "2021"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"
license = "MIT"

[dependencies]
bitfield.workspace = true
defmt = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
embedded-io-async.workspace = true
embedded-services.workspace = true
embedded-usb-pd.workspace = true
log = { workspace = true, optional = true }
tps6699x = { workspace = true, features = ["embassy"] }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "tps6699x/defmt",
    "embedded-usb-pd/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
    "tps6699x/log",
]
