[workspace]

[package]
name = "rt633-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt", features = [
    "defmt",
    "time-driver",
    "time",
    "mimxrt633s",
    "unstable-pac",
] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal-async = "1.0.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
mimxrt600-fcb = "0.2.0"
rand = { version = "0.8.5", default-features = false }
espi-service = { path = "../../espi-service", features = ["defmt"] }
embedded-services = { path = "../../embedded-service", features = ["defmt"] }

battery-service = { path = "../../battery-service", features = ["defmt"] }
bq25773 = { git = "https://github.com/OpenDevicePartnership/bq25773" }
bq40z50 = { git = "https://github.com/OpenDevicePartnership/bq40z50" }
static_cell = "2.1.0"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", default-features = false }
