[package]
name = "embedded-services-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-imxrt = { git = "https://github.com/pop-project/embassy-imxrt", features = [
    "defmt",
    "time-driver",
    "time",
] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
mimxrt600-fcb = "0.1.0"
mimxrt685s-pac = { version = "*", features = ["rt", "critical-section"] }

embedded-services = { path = "../../embedded-service", features = ["defmt"] }
power-button-service = { path = "../../power-button-service", features = [
    "defmt",
] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
