[workspace]

[package]
name = "rt685s-evk-example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
crc = "3.2.1"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt", features = [
    "defmt",
    "time-driver",
    "time",
    "mimxrt685s",
] }

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
mimxrt600-fcb = "0.1.0"
mimxrt685s-pac = { version = "*", features = ["rt", "critical-section"] }

embedded-services = { path = "../../embedded-service", features = ["defmt"] }
power-button-service = { path = "../../power-button-service", features = [
    "defmt",
] }
power-policy-service = { path = "../../power-policy-service", features = [
    "defmt",
] }
tps6699x = { git = "https://github.com/OpenDevicePartnership/tps6699x", features = [
    "defmt",
    "embassy",
] }
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false, features = [
    "defmt",
] }
type-c-service = { path = "../../type-c-service", features = ["defmt"] }

static_cell = "2.1.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

platform-service = { path = "../../platform-service", features = [
    "defmt",
    "imxrt685",
] }
